# pdf-tool-backend

./: .dockerignore  .env.example  .env.prod.example  .gitignore  BACKEND.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docforge.db  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_tools.py
.claude/: settings.json  settings.local.json
alembic/: env.py
alembic/versions/: 4daa33bf6db0_initial_schema.py  b2e1f4a8c3d9_user_verification_and_quota.py  c5f9e2b1a4d7_processing_jobs_share_token.py  d7a3c1e5f2b8_user_totp.py
app/: __init__.py
app/core/: api_key_auth.py  config.py  dependencies.py  exceptions.py  middleware.py  plan_guard.py  security.py
app/db/: session.py
app/models/: __init__.py  api_key.py  audit_log.py  job.py  user.py  workflow.py
app/repositories/: api_key_repository.py  base.py  user_repository.py
app/schemas/: api_key.py  billing.py  common.py  dashboard.py  job.py  user.py  workflow.py
app/services/: ai_service.py  api_key_service.py  audit_service.py  auth_service.py  batch_service.py  billing_service.py  convert_service.py  dashboard_service.py  document_service.py  editor_service.py  generator_service.py  image_service.py  ocr_service.py  pdf_service.py  security_service.py  signature_service.py  workflow_service.py
app/utils/: cleanup.py  email.py  file_handler.py  rate_limiter.py
nginx/: nginx.conf
nginx/conf.d/: docforge.conf
rust_converter/: __init__.py
scratch/: debug_deps.py  debug_pure_python.py
scripts/: entrypoint.dev.sh  entrypoint.sh
src/: lib.rs
templates/: certificate_basic.json  invoice_default.json  resume_modern.json
tests/: conftest.py
(+41 files in other folders)
