[package]
name = "rust_converter_native"
version = "0.1.0"
edition = "2021"
description = "Rust-powered PDF to DOCX visual replica converter for DocForge"
license = "MIT"

[lib]
name = "_rust_converter"
crate-type = ["cdylib"]

[dependencies]
pdf_oxide = { version = "0.3.39", features = ["rendering"] }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
rdocx = "0.1.2"
thiserror = "2.0.11"
